# fastapi_graphql

./: .gitignore  pyproject.toml
src/: config.py  database.py  main.py  models.py
src/utils/: repository.py
